@@ -282,6 +282,14 @@ Example  : cast "clan donate" scroll\n\r\
 When cast on an item, this spell will send it to the room designated \
 by the casters clan boss as the donation room.
 
+SPELL_CLANEXPERIENCE=SPELL_CLAN_EXPERIENCE
+SPELL_CLAN_EXPERIENCE=<ABILITY>\
+Usage    : CAST "CLAN EXPERIENCE" [AMT] ([CLAN NAME])\n\r\
+Example  : cast "clan experience" 100\n\r\
+Example  : cast "clan experience" 100 "rough riders"\n\r\
+This spell drains an amount of experience from the caster and grants \
+it to their clan, or the specified clan if they belong to more than one.
+
 SPELL_CLANHOME=SPELL_CLAN_HOME
 SPELL_CLAN_HOME=<ABILITY>\
 Usage    : CAST "CLAN HOME" \n\r\
