@@ -1,5 +1,6 @@
 # Build 5.9.5 Release ??/??/2016
    1. New chants: Phosphorescence
+   2. Anarchy clan govt type now has Clan Experience spell as an instant benefit.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
